--- a/new.html
+++ b/new.html
@@ -18,7 +18,7 @@
           loving you and pampering you because you mean the world to me. You are
           my inspiration; you make me want to be the best for you because you
           are the best for me. I am so delighted and glad, and I am filled with
-          joy to be called your man. I love you,
+          joy to be called your gentleman. I love you,
           my baby🤞. I will adore every bit of you because you deserve
           everything bacha 💖
         </p>
